html_document moved to _output.yml

--- a/_output.yml
+++ b/_output.yml
@@ -1,7 +1,14 @@
 bookdown::gitbook: 
-  css: style.css
+  css: style_customized.css
   split_by: "rmd"
   pandoc_args: [
         "--from", "markdown+autolink_bare_uris+tex_math_single_backslash-implicit_figures"
         ]
+html_document:
+  css: style_customized.css
+  self_contained: false
+  toc: true
+  toc_float: true
+  number_sections: true
+  theme: readable
   
