--- a/_output.yml
+++ b/_output.yml
@@ -13,4 +13,7 @@ html_document:
   toc_float: true
   number_sections: true
   theme: readable
+pdf_document:
+    latex_engine: lualatex
+    number_sections: yes
   
