--- a/_output.yml
+++ b/_output.yml
@@ -4,8 +4,8 @@ bookdown::gitbook:
   pandoc_args: [
         "--from", "markdown+autolink_bare_uris+tex_math_single_backslash-implicit_figures"
         ]
-html_document:
-  fig_caption: true
+bookdown::html_document2:
+  fig_caption: yes
   keep_md: yes
   css: style_customized.css
   self_contained: false
